--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </span>
                             <span class="popular-preview-text">
                                 <span>
-                                    <span class="hotel-name">Hôtel Le soleil du matin</span>
+                                    <span class="hotel-name"><strong>Hôtel Le soleil du matin</strong></span>
                                     <span class="hotel-price">Nuit à partir de 128€</span>
                                 </span>
                                 <!-- aria-label to add info given by icons invisible to screen readers -->
@@ -126,7 +126,7 @@
                             </span>
                             <span class="popular-preview-text">
                                 <span>
-                                    <span class="hotel-name">Au coeur de l'eau Chambres d'hôtes</span>
+                                    <span class="hotel-name"><strong>Au coeur de l'eau Chambres d'hôtes</strong></span>
                                     <span class="hotel-price">Nuit à partir de 71€</span>
                                 </span>
                                 <span aria-label="hébergement 4 étoiles" role="img">
@@ -148,7 +148,7 @@
                             </span>
                             <span class="popular-preview-text">
                                 <span>
-                                    <span class="hotel-name">Hôtel Tout bleu et Blanc</span>
+                                    <span class="hotel-name"><strong>Hôtel Tout bleu et Blanc</strong></span>
                                     <span class="hotel-price">Nuit à partir de 68€</span>
                                 </span>
                                 <span aria-label="hébergement 4 étoiles" role="img">
@@ -173,7 +173,7 @@
                                 <img src="images/accommodation/auberge-de-la-cannebiere.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Auberge de la Cannebière</span>
+                                <span class="hotel-name"><strong>Auberge de la Cannebière</strong></span>
                                 <span class="hotel-price">Nuit à partir de <em>25€</em></span>
                                 <span aria-label="hébergement 4 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -193,7 +193,7 @@
                                 <img src="images/accommodation/hotel-du-port.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Hôtel du Port</span>
+                                <span class="hotel-name"><strong>Hôtel du Port</strong></span>
                                 <span class="hotel-price">Nuit à partir de 52€</span>
                                 <span aria-label="hébergement 5 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -213,7 +213,7 @@
                                 <img src="images/accommodation/hotel-les-mouettes.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Hôtel Les mouettes</span>
+                                <span class="hotel-name"><strong>Hôtel Les mouettes</strong></span>
                                 <span class="hotel-price">Nuit à partir de 76€</span>
                                 <span aria-label="hébergement 4 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -233,7 +233,7 @@
                                 <img src="images/accommodation/hotel-de-la-mer.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Hôtel de la mer</span>
+                                <span class="hotel-name"><strong>Hôtel de la mer</strong></span>
                                 <span class="hotel-price">Nuit à partir de 46€</span>
                                 <span aria-label="hébergement 3 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -253,7 +253,7 @@
                                 <img src="images/accommodation/auberge-le-panier.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Auberge Le Panier</span>
+                                <span class="hotel-name"><strong>Auberge Le Panier</strong></span>
                                 <span class="hotel-price">Nuit à partir de <em>23€</em></span>
                                 <span aria-label="hébergement 4 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -273,7 +273,7 @@
                                 <img src="images/accommodation/hotel-chez-amina.jpg" alt="" aria-hidden="true">
                             </span>
                             <span class="accommodation-preview-text">
-                                <span class="hotel-name">Hôtel chez Amina</span>
+                                <span class="hotel-name"><strong>Hôtel chez Amina</strong></span>
                                 <span class="hotel-price">Nuit à partir de 96€</span>
                                 <span aria-label="hébergement 5 étoiles" role="img">
                                     <i class="fas fa-star blue-icon" aria-hidden="true"></i>
@@ -300,7 +300,7 @@
                             <span class="activities-preview-img">
                                 <img src="images/activities/vieux-port.jpg" alt="" aria-hidden="true">
                             </span>
-                            <span class="activity-name">Vieux Port</span>
+                            <span class="activity-name"><strong>Vieux Port</strong></span>
                         </span>
                     </a>
                 </div>
@@ -311,7 +311,7 @@
                                 <span class="activities-preview-img">
                                     <img src="images/activities/fort-de-pomegues.jpg" alt="" aria-hidden="true">
                                 </span>
-                                <span class="activity-name">Fort de Pomègues</span>
+                                <span class="activity-name"><strong>Fort de Pomègues</strong></span>
                             </span>
                         </a>
                     </div>
@@ -321,7 +321,7 @@
                                 <span class="activities-preview-img">
                                     <img src="images/activities/iles-du-frioul.jpg" alt="" aria-hidden="true">
                                 </span>
-                                <span class="activity-name">Îles du Frioul</span>
+                                <span class="activity-name"><strong>Îles du Frioul</strong></span>
                             </span>
                         </a>
                     </div>
@@ -332,7 +332,7 @@
                             <span class="activities-preview-img">
                                 <img src="images/activities/parc-national-des-calanques.jpg" alt="" aria-hidden="true">
                             </span>
-                            <span class="activity-name">Parc National des Calanques</span>
+                            <span class="activity-name"><strong>Parc National des Calanques</strong></span>
                         </span>
                     </a>
                 </div>
@@ -343,7 +343,7 @@
                                 <span class="activities-preview-img">
                                     <img src="images/activities/notre-dame-de-la-garde.jpg" alt="" aria-hidden="true">
                                 </span>
-                                <span class="activity-name">Notre-Dame-de-la-Garde</span>
+                                <span class="activity-name"><strong>Notre-Dame-de-la-Garde</strong></span>
                             </span>
                         </a>
                     </div>
@@ -353,7 +353,7 @@
                                 <span class="activities-preview-img">
                                     <img src="images/activities/parc-longchamp.jpg" alt="" aria-hidden="true">
                                 </span>
-                                <span class="activity-name">Parc Longchamp</span>
+                                <span class="activity-name"><strong>Parc Longchamp</strong></span>
                             </span>
                         </a>
                     </div>
